--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.1'
 
 services:
-  mongo:
-    image: mongo
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: wemp
+      POSTGRES_DB: wemp
+      POSTGRES_PASSWORD: wemp
     ports:
-      - 27017:27017
-
-  mongo-express:
-    image: mongo-express
-    ports:
-      - 8081:8081
+    - "5432:5432"
